--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ li a {
     letter-spacing: 25px;
     text-transform: uppercase;
     font-family: 'Poiret One', cursive;
+    margin-right: -25px; /* to end the letter-spacing from last letter */
 }
 
 .footer {
