--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     margin: 0;
 }
+
 * {
     box-sizing: border-box;
 }
+
 .nav ul {
     display: flex;
     background-color: rgb(240, 239, 239);
@@ -12,25 +14,29 @@ body {
     padding: 0;
     margin: 0;
 }
+
 .nav li {
     float: left;
 }
+
 li a {
     text-decoration: none;
     display: block;
     color: black;
     /* background-color: darkblue; */
-    padding: 10px 20px;
+    padding: 1vh 1.04vh;
     font-size: 1.1rem;
     font-family: 'Raleway', sans-serif;
     /* border-bottom: 2px solid darkcyan;
     transition: border-bottom, 1s; */
 }
+
 .section {
     display: flex;
     /* background-color: rgba(211, 211, 211, 0.5); */
     background-color: rgb(240, 239, 239);
-    height:20rem;
+    /* height:20rem; */
+    height: 44.8vh;
     justify-content: center;
     align-items: flex-end;
     text-align: center;
@@ -38,6 +44,7 @@ li a {
     word-spacing: 5px;
     text-transform: uppercase; */
 }
+
 .nameStyle {
     letter-spacing: 25px;
     text-transform: uppercase;
@@ -52,9 +59,9 @@ li a {
     justify-content: space-between;
     align-items: center;
     flex-flow:column;
-    height: 24rem;
+    /* height: 24rem; */
+    height: 51vh;
     color: white;
-
 }
 
 @media screen and (max-width: 650px) {
